force-app/main/default/objects/Dev_Activity_Score_Lookup__c/Dev_Activity_Score_Lookup__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing : Activity score lookup table for DISCover</description>
    <label>Dev Activity Score Lookup</label>
    <nameField>
        <displayFormat>DEV-SCORE-{0000}</displayFormat>
        <label>Dev Activity Score Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Activity Score Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>