force-app/main/default/objects/Dev_Activity_Score_Lookup__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>216</length>
    <required>true</required>
    <type>Text</type>
</CustomField>