force-app/main/default/objects/Dev_Activity_Score_Lookup__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>DIScover salesforce object field name</description>
    <label>Field</label>
    <length>64</length>
    <type>Text</type>
</CustomField>