force-app/main/default/objects/Dev_Activity_Score_Lookup__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>DIScover Salesforce object name</description>
    <label>Object</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>