force-app/main/default/objects/Dev_Activity_Score_Lookup__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>